# mantis

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  Todo.md
.github/: FUNDING.yml
.github/workflows/: cmake-multi-platform.yml  cmake-multi-platform.yml-bak  release-build.yml  release.yml
cmake/: FindZSTD.cmake  add-asan.cmake  add-bcrypt.cmake  add-cmrc.cmake  add-doxygen.cmake  add-duktape.cmake  add-httplib.cmake  add-json.cmake  add-semver.cmake  add-soci.cmake  add-tests.cmake  add-wolfssl.cmake  asan.cmake  cparse.cmake  sqlite3.cmake
dashboard/: package-lock.json  package.json
dashboard/src/: app.css
doc/: 00.installation.md  01.cmd.md  02.api.md  03.rules.md  04.architecture.md  05.embedding.md  06.docker.md  10.sync.md  11.files.md  12.healthcheck.md  13.scripting.md  Doxyfile.in  QuickStart.md  api.md  architecture.md  sync.md
docker/: Dockerfile  docker-compose.yaml  docker.md
docs/: 00_8installation_8md.html  01_8cmd_8md.html  02_8api_8md.html  03_8rules_8md.html  04_8architecture_8md.html  05_8embedding_8md.html  06_8docker_8md.html  10_8sync_8md.html  11_8files_8md.html  12_8healthcheck_8md.html  13_8scripting_8md.html  CNAME  Doxyfile.in  QuickStart_8md.html  README_8md.html  annotated.html  annotated_dup.js  api.md  api_8md.html  app_8cpp.html  app_8cpp.js  app_8cpp__incl.map  app_8cpp__incl.md5  app_8h.html  app_8h.js  app_8h__dep__incl.map  app_8h__dep__incl.md5  app_8h__incl.map  app_8h__incl.md5  app_8h_source.html  architecture.html  architecture.md  architecture_8md.html  auth__utils_8cpp.html  auth__utils_8cpp.js  auth__utils_8cpp__incl.map  auth__utils_8cpp__incl.md5  classes.html  classmantis_1_1Context-members.html  classmantis_1_1Context.html  (+660 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_31.js  all_32.js  all_33.js  (+95 more)
examples/: main.cpp  table2SQL-demo.cpp
include/mantis/: config.hpp  mantis.h  mantisbase.h  utils.h
include/mantisbase/: mantis.h  mantisbase.h
libs/cparse/: builtin-features.cpp  builtin_features.h
libs/duktape/: CMakeLists.txt  README.md
libs/libbcrypt/: libbcrypt.c
src/: adminmgr.cpp  database.cpp  httpserver.cpp  logger.cpp  main.cpp  mantis.cpp  mantisapp.cpp  mantisbase.cpp  models.cpp  parse_cmd.cpp  server.cpp  servermgr.cpp  tablemgr.cpp
src/app/: app.cpp
src/core/: auth.cpp  context_store.cpp  context_store_mgr.cpp  crud.cpp  database.cpp  database_mgr.cpp  exceptions.cpp  expr_evaluator.cpp  files_mgr.cpp  fileunit.cpp  http.cpp  http_mgr.cpp  http_request.cpp  http_response.cpp  jwt.cpp  jwt_mgr.cpp  logging.cpp  logs_mgr.cpp  middlewares.cpp  route_registry.cpp  router.cpp  router_httplib_internals.cpp  router_mgr.cpp  settings.cpp  settings_mgr.cpp
src/utils/: auth_utils.cpp  date_utils.cpp  dukglue_utils_bindings.cpp  path_utils.cpp  string_utils.cpp  type_utils.cpp
tests/: CMakeLists.txt  main.cpp  test_environment.h  test_fixure.h  test_helpers.h
tests/integration/: test_access_permissions.cpp  test_access_permissions_base.cpp  test_access_permissions_base.h  test_api_endpoints.cpp  test_auth_flow.cpp  test_crud_add_permissions.cpp  test_crud_delete_permissions.cpp  test_crud_get_permissions.cpp  test_crud_list_permissions.cpp  test_crud_update_permissions.cpp
tests/scripting/: index.mantis.js
tests/unit/: test_database.cpp  test_jwt.cpp  test_models.cpp
wiki/: annotated.html  app_8cpp.html  app_8cpp__incl.map  app_8cpp__incl.md5  app_8h.html  app_8h__dep__incl.md5  app_8h__incl.map  app_8h_source.html  auth__utils_8cpp__incl.md5  classes.html  classmantis_1_1Context-members.html  classmantis_1_1Context_a01a68a55163e1cc12b94dadabdc9cb68_cgraph.map  classmantis_1_1Context_a01a68a55163e1cc12b94dadabdc9cb68_icgraph.map  classmantis_1_1Context_a39e0750e37539e811ea89c7b04620b95_icgraph.map  classmantis_1_1Context_a39e0750e37539e811ea89c7b04620b95_icgraph.md5  classmantis_1_1Context_acba5e9d0fe8417b71f0e729a59724bc8_icgraph.map  classmantis_1_1Context_acba5e9d0fe8417b71f0e729a59724bc8_icgraph.md5  classmantis_1_1Context_ad1ddc69a1bad56269383d789b1ee1b55_icgraph.map  classmantis_1_1Context_ad1ddc69a1bad56269383d789b1ee1b55_icgraph.md5  classmantis_1_1CrudInterface-members.html  classmantis_1_1CrudInterface.html  classmantis_1_1DatabaseUnit-members.html  classmantis_1_1DatabaseUnit.html  classmantis_1_1DatabaseUnit_a0a9751fb78fda4dd72c099533cde7174_icgraph.md5  classmantis_1_1DatabaseUnit_aa8fe8dd2db156175c8313d798ff5e26c_cgraph.map  classmantis_1_1DatabaseUnit_aaf1cf9804c647918f741e3fdaa66986c_cgraph.map  classmantis_1_1DatabaseUnit_aaf1cf9804c647918f741e3fdaa66986c_cgraph.md5  classmantis_1_1DatabaseUnit_ab7ff272cd61b8ced0603b9bc7d3b8633_icgraph.map  classmantis_1_1DatabaseUnit_ab7ff272cd61b8ced0603b9bc7d3b8633_icgraph.md5  classmantis_1_1HttpUnit_a2750f753bad8a6fcdb1eb89fc88ab9ce_icgraph.md5  classmantis_1_1HttpUnit_a28244dbccf9b65795230fafc0b3617e6_icgraph.map  classmantis_1_1HttpUnit_a28244dbccf9b65795230fafc0b3617e6_icgraph.md5  classmantis_1_1HttpUnit_a297b04de78e5ee477276ee01201e130e_icgraph.map  classmantis_1_1HttpUnit_a57cb6b16b39caa39b822c73a2958648c_icgraph.map  classmantis_1_1HttpUnit_a57cb6b16b39caa39b822c73a2958648c_icgraph.md5  classmantis_1_1HttpUnit_aa0f67227f09877e15d0d1cd37c28cf6e_icgraph.map  classmantis_1_1HttpUnit_ab79d396b33678132ce0747d9b39ba4ab_cgraph.map  classmantis_1_1HttpUnit_ab79d396b33678132ce0747d9b39ba4ab_cgraph.md5  classmantis_1_1HttpUnit_ab79d396b33678132ce0747d9b39ba4ab_icgraph.map  classmantis_1_1HttpUnit_ab79d396b33678132ce0747d9b39ba4ab_icgraph.md5  (+455 more)
wiki/search/: all_1.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  all_f.js  (+57 more)
(+154 files in other folders)
